--- a/js/index.html
+++ b/js/index.html
@@ -3,67 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cafe menu</title>
-    <link rel="stylesheet" href="/style.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>JavaScript Fundamentals – Part 2</title>
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(to top left, #28b487, #7dd56f);
+      }
+      h1 {
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <div id="menu">
-      <main>
-        <h1>CAMPER CAFE</h1>
-        <p class="established">Est. 2020</p>
-        <hr />
-        <section>
-          <h2>Coffee</h2>
-          <article class="item">
-            <p class="flavor">French Vanilla</p>
-            <p class="price">3.00</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Caramel Macchiato</p>
-            <p class="price">3.75</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Pumpkin Spice</p>
-            <p class="price">3.50</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Hazelnut</p>
-            <p class="price">4.00</p>
-          </article>
-          <article class="item">
-            <p class="flavor">Mocha</p>
-            <p class="price">4.50</p>
-          </article>
-        </section>
-        <section>
-          <h2>Desserts</h2>
-          <article class="item">
-            <p class="dessert">Donut</p>
-            <p class="price">1.50</p>
-          </article>
-          <article>
-            <p class="dessert">Cherry Pie</p>
-            <p class="price">2.75</p>
-          </article>
-          <article>
-            <p class="dessert">Cheesecake</p>
-            <p class="price">3.00</p>
-          </article>
-          <article>
-            <p class="dessert">Cinnamon Roll</p>
-            <p class="price">2.50</p>
-          </article>
-        </section>
-      </main>
-      <hr />
-      <footer>
-        <p>
-          <a href="https://www.freecodecamp.org" target="_blank"
-            >Visit our website</a
-          >
-        </p>
-        <p>123 Free Code Camp Drive</p>
-      </footer>
-    </div>
+    <h1>JavaScript Fundamentals – Part 2</h1>
+    <script src="script.js"></script>
   </body>
 </html>
